Q1 done, Q2 EVTYPE tidy

--- a/Rep_Data_Proj2.Rmd
+++ b/Rep_Data_Proj2.Rmd
@@ -9,25 +9,387 @@ output: html_document
 library(dplyr)
 library(ggplot2)
 library(knitr)
+library(stringr)
 knitr::opts_chunk$set(echo = TRUE)
 setwd("~/R/Coursera/5-Reproducible Research/Rep_Research_Proj2")
-strm_data <- read.csv("repdata%2Fdata%2FStormData.csv")
+strm_data <- read.csv("repdata%2Fdata%2FStormData.csv", stringsAsFactors = F)
+```
+
+```{r tidy_data}
+strm_data1 <- strm_data[!(strm_data$FATALITIES== 0 & strm_data$INJURIES==0),]
+strm_data2 <- strm_data1 %>%
+     mutate(EVTYPE = str_to_upper(EVTYPE) %>%
+                 str_trim()) %>%
+     filter(!str_detect(EVTYPE, "SUMMARY")) %>%
+     mutate(EVTYPEFix = str_replace_all(
+          EVTYPE,
+          c("^(NON|NO)?[ -]?(SEVERE|STRONG|MAJOR|MODERATE|LIGHT|HEAVY|HVY|EXCESSIVE|DENSE|DEEP|DAMAGING|MINOR|EXTREME) " = "", # Get rid of "severe/non-severe"
+            "(.*)BLIZZARD(.*)" = "BLIZZARD",
+            "HIGH" = "HIGH WIND",
+            "FROST" = "FROST/FREEZE",
+            "FREEZING FOG STORM" = "FREEZING FOG",
+            "WINDCHILL" = "COLD/WIND CHILL",
+            "WIND" = "HIGH WIND",
+            "COLD" = "COLD/WIND CHILL",
+            "TYPHOON" = "HURRICANE (TYPHOON)",
+            "FREEZE" = "FROST/FREEZE",
+            "ICE" = "ICE STORM",
+            "SURF" = "HIGH SURF",
+            "AVALANCE" = "AVALANCHE",
+            "BLACK ICE" = "FREEZING FOG",
+            "BLOWING SNOW(.*)" = "WINTER STORM",
+            "(COASTAL|CSTL|BEACH)(.*)FLOOD(.*)" = "COASTAL FLOOD",
+            "^HAIL(.*)" = "HAIL",
+            "COASTAL ?STORM" = "TROPICAL STORM",
+            "BLOW-OUT TIDE(.*)" = "ASTRONOMICAL LOW TIDE",
+            "TIDAL(.*)FLOOD(.*)" = "COASTAL FLOOD",
+            "TSTM ?WN?D?" = "THUNDERSTORM WIND",
+            "TSTM" = "THUNDERSTORM WIND",
+            "WND" = "HIGH WIND",
+            "TH?UNDEE?R(.*?)WIND(.*)" = "THUNDERSTORM WIND",
+            "^THUNDERWIND(.*)" = "THUNDERSTORM WIND",
+            "THUNDERWIND(.*)" = "THUNDERSTORM WIND",
+            "(.*)(TORNADO|TORNDAO)(.*)" = "TORNADO",
+            "TROPICAL STORM(.*)" = "TROPICAL STORM",
+            "TORRENTIAL RAIN" = "HEAVY RAIN",
+            "UNSEASON([A-Z]*)" = "UNSEASONABLY",
+            "&" = "AND",
+            "URBAN AND " = "URBAN/",
+            "LANDSL(.*)" = "LANDSLIDE",
+            "STORM SURGE(.*)" = "STORM SURGE",
+            "STREET FLOOD(.*)" = "FLOOD",
+            "(.*)URBAN(.*)FL(.*)" = "FLOOD",
+            "URBAN/SMALL(.*)" = "FLOOD",
+            "(URBAN SMALL)" = "FLOOD",
+            "WAY?TER ?SPOUT(.*)" = "WATERSPOUT",
+            "WINTER STORM(.*)" = "WINTER STORM",
+            "WINTER(.*)MIX" = "WINTER STORM",
+            "(.*)WIND CHILL(.*)" = "EXTREME COLD/WIND CHILL",
+            "^RIP CURRENT(.*)" = "RIP CURRENT",
+            "^RIVER FLOOD(.*)" = "FLOOD",
+            "^WIND[S /]{0,}(ADVISORY|DAMAGE|GUSTS|STORM|HAIL)$" = "HIGH WIND",
+            "UNUSUALLY|UNUSUAL|UNSEASONABLY" = "UNSEASONABLY",
+            "^SNOW(.*)" = "WINTER STORM",
+            "WALL CLOUD(.*)" = "FUNNEL CLOUD", 
+            "^FLASH FLOOD" = "FLOOD",
+            "VOLCAN(.*)" = "VOLCANIC ASH",
+            "^ICE JAM(.*)" = "FLOOD",
+            "ICE ?/?((AND|SNOW|FLOES|STORM|PELLETS) ?){1,}" = "ICE STORM",
+            "LAKE(.*)SNOW" = "LAKE-EFFECT SNOW",
+            "LAKE(.*)FLOOD" = "LAKESHORE FLOOD",
+            "LATE(.*)SEASON SNOW(.*)" = "HEAVY SNOW",
+            "THUNDERSNOW(.*)" = "WINTER SNOW",
+            "(THUNDER|THUNDE|THUNER|THUDER)STORM(.*)" = "THUNDERSTORM WIND",
+            "SLEET(.*)" = "SLEET",
+            "(SMALL STREAM)|(SML STREAM) (FLOODING|FLD|FLOOD)" = "FLOOD",
+            "SMALL STREAM(.*)" = "FLOOD",
+            "RED FLAG(.*)" = "HIGH SURF",
+            "ROUGH (SEAS|SURF)" = "MARINE HIGH WIND",
+            "RAIN(.*)" = "HEAVY RAIN",
+            "MUD(.*)SLIDE(.*)" = "DEBRIS FLOW",
+            "(NEAR )?RECORD ?" = "",
+            "(LIGHTNING|LIGHTING|LIGNTNING)(.*)" = "LIGHTNING",
+            "LOCALLY HEAVY " = "",
+            "HURRICANE(.*)" = "HURRICANE (TYPHOON)",
+            "HIGH WINDS(.*)" = "HIGH WIND",
+            "HIGHWAY " = "STREET ",
+            "SHOWERS?" = "HEAVY RAIN",
+            "WILD(.*)FIRE(.*)" = "WILDFIRE",
+            "ROUGH SEAS(.*)" = "MARINE HIGH WIND",
+            "ICE(.*)ROAD(.*)" = "ICE STORM",
+            "HIGH WIND(.*)" = "HIGH WIND",
+            "FREEZING (.*)" = "SLEET",
+            "FROST[[:punct:]]{1,}FREEZE" = "FROST/FREEZE",
+            "(.*)FUNNEL(.*)" = "FUNNEL CLOUD",
+            "FLASH FLOOD(.*)" = "FLASH FLOOD",
+            "FLOOD(.*)" = "FLOOD",
+            "DRY MIRCOBURST WIND" = "THUNDERSTORM WIND",
+            "DRY MICROBURST(.*)" = "THUNDERSTORM WIND",
+            "COLD AND(.*)" = "COLD/WIND CHILL",
+            "COLD WEATHER" = "COLD/WIND CHILL", 
+            "DROUGHT(.*)" = "DROUGHT",
+            "/EXCESSIVE HEAT" = "EXCESSIVE HEAT",
+            "BRUSH FIRE" = "WILDFIRE",
+            "COLD TEMPERATURE" = "COLD/WIND CHILL",
+            "COLD WAVE" = "COLD/WIND CHILL",
+            "EXTENDED COLD" = "COLD/WIND CHILL",
+            "FALLING SNOW/ICE" = "WINTER STORM",
+            "DRY MIRCOBURST WIND HIGH WIND" = "THUNDERSTORM WIND",
+            "GLAZE/ICE STORM" = "ICESTORM",
+            "GLAZE" = "ICE STORM",
+            "FOG" = "DENSE FOG",
+            "FOG AND COLD/WINDCHILLS" = "COLD/WIND CHILL",
+            "GUSTY WIND" = "HIGH WIND",
+            "GUSTY WINDS" = "HIGH WIND",
+            "HAZARDOUS SURF" = "HIGH SURF",
+            "HEAT WAVE" = "HEAT",
+            "HEAT WAVE DROUGHT" = "HEAT",
+            "HEAT WAVES" = "HEAT",
+            "HEAVY HEAVY RAIN" = "HEAVY RAIN",
+            "COLD/WINDS" = "COLD/WIND CHILL",
+            "DENSE FOG AND COLD/WIND CHILLS" = "DENSE FOG",
+            "FREZZING DENSE FOG" = "FREEZING FOG",
+            "HEAT DROUGHT" = "HEAT",
+            "HEATS" = "HEAT",
+            "HIGH SWELLS" = "MARINE HIGH WIND",
+            "HIGH SEAS" = "MARINE HIGH WIND",
+            "HIGH WATER" = "FLOOD",
+            "HIGH WAVES" = "MARINE HIGH WIND",
+            "HIGH SURF" = "MARINE HIGH WIND",
+            "HIGH WINDS" = "HIGH WIND",
+            "HYPERTHERMIA/EXPOSURE" = "EXTREME COLD/WIND CHILL",
+            "HYPOTHERMIA/EXPOSURE" = "EXTREME COLD/WIND CHILL",
+            "HYPOTHERMIA" = "EXTREME COLD/WIND CHILL",
+            "ICE STORM/FLASH FLOOD" = "ICE STORM",
+            "ICESTORM" = "ICE STORM",
+            "ICY ROADS" = "ICE STORM",
+            "LANDSLIDE" = "DEBRIS FLOW",
+            "LOW TEMPERATURE" = "COLD/WIND CHILL",
+            "MARINE STRONG WIND" = "MARINE HIGH WIND",
+            "MARINE WIND" = "MARINE STRONG WIND",
+            "MIXED PRECIP" = "WINTER STORM",
+            "RAPIDLY RISING WATER" = "FLASH FLOOD",
+            "SMALL HAIL" = "HAIL",
+            "STORM SURGE" = "STORM SURGE/TIDE",
+            "SURF AND WIND" = "HIGH SURF",
+            "SURF/MARINE HIGH WIND" = "MARINE HIGH WIND",
+            "UNSEASONABLY COLD" = "COLD/WIND CHILL",
+            "UNSEASONABLY WARM" = "HEAT",
+            "UNSEASONABLY WARM AND DRY" = "DROUGHT",
+            "WARM WEATHER" = "HEAT",
+            "HEAT AND DRY" = "DROUGHT",
+            "NON THUNDERSTORM WIND" = "HIGH WIND",
+            "ROGUE WAVE" = "MARINE HIGH WIND",
+            "WHIRLWIND" = "DUST DEVIL",
+            "WINDS" = "HIGH WIND",
+            "WINTER SNOW" = "WINTER STORM",
+            "WINTRY MIX" = "WINTER WEATHER",
+            "MARINE ACCIDENT" = "MARINE THUNDERSTORM WIND",
+            "MARINE MISHAP" = "MARINE THUNDERSTORM WIND",
+            "HAZARDOUS MARINE HIGH WIND" = "MARINE HIGH WIND",
+            "HIGH MARINE HIGH WIND" = "MARINE HIGH WIND",
+            "FROST/FROST/FREEZE" = "FROST/FREEZE",
+            "MARINE HIGH WIND AND WIND" = "MARINE HIGH WIND",
+            "MARINE HIGH WIND AND HIGH WIND" = "MARINE HIGH WIND",
+            "MARINE HIGH WIND/MARINE HIGH WIND" = "MARINE HIGH WIND",
+            "MARINE STRONG HIGH WIND" = "MARINE HIGH WIND",
+            "ROUGH MARINE HIGH WIND" = "MARINE HIGH WIND",
+            "SEAS" = "MARINE HIGH WIND",
+            "WINTER STORM STORM" = "WINTER STORM",
+            "GUSTY HIGH WIND" = "HIGH WIND",
+            "HIGH HIGH WIND" = "HIGH WIND",
+            "DRY MIRCOBURST HIGH WIND" = "THUNDERSTORM WIND",
+            "WHIRLHIGH WIND" = "HIGH WIND",
+            "OTHER" = "DUST DEVIL",
+            "MARINE HIGH WIND/HIGH WIND" = "MARINE HIGH WIND"
+          )
+     ))
 ```
 
 ### 1. Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?
 
 ```{r fat+inj}
-strm_data$FAT_INJ <- strm_data$FATALITIES + strm_data$INJURIES
-fat_inj <- select(strm_data, EVTYPE, FAT_INJ)
-fat_inj_tot <- aggregate(FAT_INJ~EVTYPE, fat_inj, sum)
+strm_data2$FAT_INJ <- strm_data2$FATALITIES + strm_data2$INJURIES
+fat_inj <- select(strm_data2, EVTYPEFix, FAT_INJ)
+fat_inj_tot <- aggregate(FAT_INJ~EVTYPEFix, fat_inj, sum)
 fat_inj_max <- fat_inj_tot[which.max(fat_inj_tot$FAT_INJ),]
 print(fat_inj_max)
 fat_inj_rst <- sum(fat_inj_tot$FAT_INJ) - fat_inj_max$FAT_INJ
 print(fat_inj_rst)
 ```
 
-Per the data collected, tornados have caused 96,979 injuries and fatalities during the study period. 
-
-It should be noted that the data provided has many duplicated, or seemingly duplicated Event Types. As the total number of injuries and fatalities for all other Event types is 56,694, it is clear that while the exact amount of injuries and fatalities for tornados may be slightly inaccurate, no other Event Type has caused a greater number of fatalities or injuries than tornados.  
+Per the data collected, tornados have caused the most direct injuries and fatalities during the study period. 
 
 ## 2. Across the United States, which types of events have the greatest economic consequences?
+
+```{r tidy_data}
+strm_data3 <- strm_data[!(strm_data$PROPDMG== 0 & strm_data$CROPDMG==0),]
+strm_data3 <- strm_data3[!(strm_data3$EVTYPE == "?" |
+                           strm_data3$EVTYPE == "EXCESSIVE WETNESS" |
+                           strm_data3$EVTYPE == "SEVERE TURBULENCE"),]
+
+strm_data3$EVTYPE[strm_data3$REFNUM >= 298582 & strm_data3$REFNUM <= 298611] <- "HEAVY RAIN"
+strm_data3$EVTYPE[strm_data3$REFNUM == 249429] <- "HEAVY SNOW"
+
+strm_data4 <- strm_data3 %>%
+     mutate(EVTYPE = str_to_upper(EVTYPE) %>%
+                 str_trim()) %>%
+     filter(!str_detect(EVTYPE, "SUMMARY")) %>%
+     mutate(EVTYPEFix = str_replace_all(
+          EVTYPE,
+          c("^(NON|NO)?[ -]?(DAMAGING|DEEP|HVY|LIGHT|MAJOR|MINOR|MODERATE|SEVERE|STRONG) " = "",
+          "(.*)BLIZZARD(.*)" = "BLIZZARD",
+          "^HAIL(.*)" = "HAIL",
+          "(COASTAL|CSTL|BEACH)(.*)FLOOD(.*)" = "COASTAL FLOOD",
+          "COASTAL ?STORM" = "COASTAL STORM",
+          "BLOWING SNOW(.*)" = "BLOWING SNOW",
+          "BLOW-OUT TIDE(.*)" = "BLOW OUT TIDE",
+          "TIDAL(.*)FLOOD(.*)" = "TIDAL FLOOD",
+          "MARINE TSTM WIND" = "MARINE THUNDERSTORM WIND",
+          "TSTM ?WN?D?" = "THUNDERSTORM WIND",
+          "TSTM" = "THUNDERSTORM",
+          "WND" = "WIND",
+          "TH?UNDEE?R(.*?)WIND(.*)" = "THUNDERSTORM",
+          "^THUNDERWIND(.*)" = "THUNDERSTORM",
+          "THUNDERWIND(.*)" = "THUNDERSTORM",
+          "(.*)(TORNADO|TORNDAO)(.*)" = "TORNADO",
+          "TROPICAL STORM(.*)" = "TROPICAL STORM",
+          "TORRENTIAL RAIN" = "HEAVY RAIN",
+          "UNSEASON([A-Z]*)" = "UNSEASONABLY",
+          "&" = "AND",
+          "URBAN AND " = "URBAN/",
+          "LANDSL(.*)" = "LANDSLIDE",
+          "STORM SURGE(.*)" = "STORM SURGE",
+          "STREET FLOOD(.*)" = "STREET FLOODING",
+          "(.*)URBAN(.*)FL(.*)" = "URBAN FLOODING",
+          "URBAN/SMALL(.*)" = "URBAN FLOODING",
+          "(URBAN SMALL)" = "URBAN FLOODING",
+          "WAY?TER ?SPOUT(.*)" = "WATERSPOUT",
+          "WINTER STORM(.*)" = "WINTER STORM",
+          "WINTER(.*)MIX" = "WINTRY MIX",
+          "(.*)WIND CHILL(.*)" = "WIND CHILL",
+          "^RIP CURRENT(.*)" = "RIP CURRENT",
+          "^RIVER FLOOD(.*)" = "RIVER FLOODING",
+          "^WIND[S /]{0,}(ADVISORY|DAMAGE|GUSTS|STORM|HAIL)$" = "WIND",
+          "UNUSUALLY|UNUSUAL|UNSEASONABLY" = "UNSEASONABLY",
+          "^SNOW(.*)" = "SNOW",
+          "WALL CLOUD(.*)" = "WALL CLOUD", 
+          "^FLASH FLOOD" = "FLASH FLOOD",
+          "VOLCAN(.*)" = "VOLCANO",
+          "^ICE JAM(.*)" = "ICE JAM",
+          "ICE ?/?((AND|SNOW|FLOES|STORM|PELLETS) ?){1,}" = "ICE",
+          "LAKE(.*)SNOW" = "LAKE EFFECT SNOW",
+          "LAKE(.*)FLOOD" = "LAKE FLOOD",
+          "LATE(.*)SEASON SNOW(.*)" = "SNOW",
+          "THUNDERSNOW(.*)" = "THUNDERSNOW",
+          "(THUNDER|THUNDE|THUNER|THUDER)STORM(.*)" = "THUNDERSTORM",
+          "SLEET(.*)" = "SLEET",
+          "(SMALL STREAM)|(SML STREAM) (FLOODING|FLD|FLOOD)" = "SMALL STREAM FLOODING",
+          "SMALL STREAM(.*)" = "SMALL STREAM FLOODING",
+          "RED FLAG(.*)" = "RED FLAG",
+          "ROUGH (SEAS|SURF)" = "ROUGH SEAS",
+          "RAIN(.*)" = "RAIN",
+          "MUD(.*)SLIDE(.*)" = "MUDSLIDE",
+          "(NEAR )?RECORD ?" = "",
+          "(LIGHTNING|LIGHTING|LIGNTNING)(.*)" = "LIGHTNING",
+          "LOCALLY HEAVY " = "",
+          "HURRICANE(.*)" = "HURRICANE",
+          "HIGHWAY " = "STREET ",
+          "SHOWERS?" = "RAIN",
+          "WILD(.*)FIRE(.*)" = "WILDFIRE",
+          "ROUGH SEAS(.*)" = "ROUGH SEAS",
+          "ICE(.*)ROAD(.*)" = "ICY ROADS",
+          "HIGH WIND(.*)" = "WIND",
+          "FREEZING (.*)" = "FREEZING PRECIP",
+          "FROST[[:punct:]]{1,}FREEZE" = "FREEZE",
+          "(.*)FUNNEL(.*)" = "FUNNEL CLOUD",
+          "FLASH FLOOD(.*)" = "FLASH FLOOD",
+          "FLOOD(.*)" = "FLOOD",
+          "DRY MICROBURST(.*)" = "DRY MICROBURST",
+          "COLD AND(.*)" = "COLD",
+          "COLD WEATHER" = "COLD", 
+          "COLD/(.*)" = "COLD",
+          "DROUGHT(.*)" = "DROUGHT",
+          "AGRICULTURAL FREEZE" = "FROST/FREEZE",
+          "APACHE COUNTY" = "HIGH WIND",
+          "ASTRONOMICAL HIGH TIDE" = "HIGH SURF",
+          "BEACH EROSION" = "HIGH SURF",
+          "BLOWING DUST" = "DUST STORM",
+          "BLOWING SNO(.*)" = "WINTER STORM",
+          "BREAKUP FLOOD" = "FLOOD",
+          "BRUSH FIRE" = "WILD FIRE",
+          "COASTAL EROSION" = "HIGH WIND",
+          "COASTAL FLOOD" = "FLOOD",
+          "COASTAL SURGE" = "STORM SURGE/TIDE",
+          "COASTAL STORM" = "MARINE THUNDERSTORM WIND",
+          "COOL AND WET" = "COLD/WIND CHILL",
+          "DAM BREAK" = "FLASH FLOOD",
+          "DOWNBURST" = "HEAVY RAIN",
+          "DRY MICROBURST" = "THUNDERSTORM WIND",
+          "DUST DEVIL WATERSPOUT" = "DUST DEVIL",
+          "DUST STORM/WIND" = "DUST STORM",
+          "EROSION/FLOOD" = "FLOOD",
+          "EXTENDED COLD" = "COLD/WIND CHILL",
+          "FOREST FIRES" = "WILDFIRE",
+          "FREEZING PRECIP" = "SLEET",
+          "GLAZE(.*)" = "SLEET",
+          "EARLY FROST" = "FROST/FREEZE", 
+          "EXTREME COLD" = "EXTREME COLD/WIND CHILL",
+          "EXTREME HEAT" = "EXCESSIVE HEAT",
+          "EXTREME WINDCHILL" = "EXTREME COLD/WIND CHILL",
+          "GRADIENT WIND" = "HIGH WIND",
+          "GRASS FIRES" = "WILDFIRE",
+          "GUSTNADO" = "THUNDERSTORM WIND",
+          "GUSTY WIND(.*)" = "HIGH WIND",
+          "HARD FREEZE" = "FROST/FREEZE",
+          "HEAT WAVE DROUGHT" = "EXCESSIVE HEAT",
+          "HEAT WAVE" = "EXCESSIVE HEAT",
+          "HEAVY LAKE EFFECT SNOW" = "LAKE-EFFECT SNOW",
+          "HEAVY MIX" = "WINTER STORM",
+          "HEAVY PRECIPITATION" = "HEAVY RAIN",
+          "HEAVY SNOW AND STRONG WINDS" = "BLIZZARD",
+          "HEAVY SNOW (.*)" = "WINTER STORM",
+          "HEAVY SNOW/(.*)" = "HEAVY SNOW",
+          "HEAVY SNOWPACK" = "HEAVY SNOW",
+          "EXCESSIVE SNOW" = "HEAVY SNOW",
+          "HEAVY SNOW-SQUALLS" = "HEAVY SNOW",
+          "HEAVY SURF(.*)" = "HIGH SURF",
+          "HEAVY SWELLS" = "HIGH SURF",
+          "HIGH WINDS" = "HIGH WIND",
+          "HIGH SEAS" = "MARINE HIGH WIND",
+          "HIGH SURF ADVISORY" = "HIGH SURF",
+          "HIGH SWELLS" = "HIGH SURF",
+          "HIGH TIDES" = "STORM SURGE/TIDE",
+          "HIGH WATER" = "FLOOD",
+          "HURRICANE" = "HURRICANE (TYPHOON)",
+          "ICE JAM" = "FLOOD",
+          "ICE/STRONG WINDS" = "ICE STORM",
+          "ICY ROADS" = "WINTER WEATHER",
+          "LAKE EFFECT SNOW" = "LAKE-EFFECT SNOW",
+          "LAKE FLOOD" = "FLOOD",
+          "LANDSLIDE" = "DEBRIS FLOW",
+          "LANDSPOUT" = "DUST DEVIL",
+          "MARINE ACCIDENT" = "MARINE THUNDERSTORM WIND",
+          "MARINE WIND" = "MARINE HIGH WIND",
+          "MICROBURST(.*)" = "THUNDERSTORM WIND",
+          "MIXED PRECIPITATION" = "WINTER WEATHER",
+          "MUDSLIDE" = "DEBRIS FLOW",
+          "NON-THUNDERSTORM" = "HIGH WIND",
+          "RIVER AND STREAM FLOOD" = "FLOOD",
+          "RIVER FLOOD" = "FLOOD",
+          "ROCK SLIDE" = "DEBRIS FLOW", 
+          "ROUGH SEAS" = "MARINE HIGH WIND",
+          "RURAL FLOOD" = "FLOOD",
+          "SMALL HAIL" = "HAIL",
+          "SMALL STREAM FLOOD" = "FLOOD",
+          "STORM FORCE WINDS" = "HIGH WIND",
+          "THUNDERSNOW" = "WINTER STORM",
+          "TIDAL FLOOD" = "STORM SURGE/TIDE",
+          "UNSEASONABLY COLD" = "COLD/WIND CHILL",
+          "UNSEASONABLY WARM" = "EXCESSIVE HEAT",
+          "URBAN FLOOD" = "FLOOD",
+          "VOLCANO" = "VOLCANIC ASH",
+          "WET THUNDERSTORM WIND" = "THUNDERSTORM WIND",
+          "WHIRLWIND" = "DUST DEVIL",
+          "WILD FIRE" = "WILDFIRE",
+          "WIND AND WAVE" = "HIGH WIND",
+          "WINTRY MIX" = "WINTER WEATHER",
+          "UNSEASONABLY RAIN" = "HEAVY RAIN",
+          "HIGH  WINDS" = "HIGH WIND",
+          "OTHER" = "DUST DEVIL",
+          "^COLD$" = "COLD/WIND CHILL",
+          "^FOG$" = "DENSE FOG", 
+          "^FREEZE$" = "FROST/FREEZE",
+          "^FROST$" = "FROST/FREEZE",
+          "^ICE$" = "ICE STORM",
+          "^MARINE THUNDERSTORM$" = "MARINE THUNDERSTORM WIND",
+          "^RAIN$" = "HEAVY RAIN",
+          "^SNOW$" = "HEAVY SNOW",
+          "^STORM SURGE$" = "STORM SURGE/TIDE",
+          "^THUNDERSTORM$" = "THUNDERSTORM WIND",
+          "^TYPHOON$" = "HURRICANE (TYPHOON)",
+          "^WIND$" = "HIGH WIND",
+          "^WIND CHILL$" = "COLD/WIND CHILL",
+          "^WINDS$" = "HIGH WIND"
+          )
+     ))```
